[package]
name = "rust-stratum"
version = "0.1.0"
edition = "2021"
description = "A robust Rust implementation of the Stratum mining protocol"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
hex = "0.4"
rand = "0.8"
uint = "0.9"
chrono = "0.4"
socket2 = "0.5"

[dev-dependencies]
tokio-test = "0.4"
